# ReAgent

./: .gitignore  README.md  main.py  pyproject.toml
examples/: __init__.py  basic_usage.py  mcp_config.json  mcp_custom_server.py  mcp_integration.py  mcp_simple.py
reagent/: __init__.py  cli.py
reagent/core/: __init__.py  adaptation.py  memory.py  models.py  orchestrator.py  prompts.py
reagent/core/tools/: __init__.py  task_analysis.py  web_search.py
reagent/tools/: __init__.py
reagent/utils/: __init__.py  mcp.py
tests/: test_orchestrator.py
